# BqForge

./: .gitignore  FEATURES.md  README.md  USER_GUIDE.md  gcp_client.py  gcp_tools.py  pyproject.toml  requirements.txt  server.py  sql_parser.py
data/: authorized_views.py  bi_engine.py  cost_management.py  data_ingestion.py  materialized_views.py  monitoring.py  partitioning.py  query_optimization.py  scheduled_queries.py  schema_design.py  security.py  storage_pricing.py  workload_management.py
